src/Style/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway:wght@100&display=swap');
body{
    color: #FF6060; 
    font-family: 'Montserrat', sans-serif;
}
.main{
    margin-left: 150px;
    margin-right: 150px;
    @media screen and (max-width:880px) {
        margin-left: 10px;
        margin-right: 10px;
    }
}
a{
    text-decoration: none;
}
button{
    background-color: #FF6060;
    color:white;
    border: 1px solid #FF6060;
    margin:10px;
    padding: 10px;
    font-family: 'Montserrat', sans-serif;
    font-weight: bold;
    font-size: 1.1rem;
}
.lodgingInfo{
    margin-left: 150px;
    margin-right: 150px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    @media screen and (max-width:880px) {
        margin-left: 10px;
        margin-right: 10px;
        display: block;
    }
}
.profil{
    border-radius: 50%;
    width: 70px;
    height: 70px;
}
.tag{
    list-style: none;
    margin: 5px;
    padding: 5px 15px 5px 15px;
    border: 1px solid;
    border-radius: 10px;
    background-color: #FF6060;
    color: white;
    font-size: 0.7rem;
}
.tags{
    display: flex;
    padding-left: 0;
}
.tags li{
    margin-left: 0;
}
.slider{
    max-width: 90%;
}
.active_star{
    color:#FF6060;
    padding-right: 20px; 
    font-size: 1.3rem; 
    @media screen and (max-width:880px) {
        padding-right: 5px;;
    }
}
.noactive_star{
    color:#D3D3D3;
    padding-right: 20px;
    font-size: 1.3rem; 
    @media screen and (max-width:880px) {
        padding-right: 5px;;
    }
}
.footer{
    background-color: black;
    text-align: center;
    padding: 20px;
    color:white;
    margin: 0;
    margin-top: 20px;
}
/* .collapse_div{
    margin-bottom: 15px;
    width: 45%;
    @media screen and (max-width:880px) {
        margin-left: 10px;
        margin-right: 10px;
        width: 95%;
    }
} */

.collapse_lodging{
    margin-left: 150px;
    margin-right: 150px;
    display: flex;
    justify-content: space-between;
    @media screen and (max-width:880px) {
        display: block;
        margin-left: 0;
        margin-right: 0;
    }
}
.collapse_lodging div{
    width: 45%;
}
.collapse_div button{
    border-radius: 5px;
    margin-bottom: 0;
    margin-left: 0;  
    width: 100%; 
}
.collapse_div p{
    background-color: #F6F6F6;
    margin-top: 0;
    padding-top: 15px;
    padding-bottom: 10px;
    text-align: center;
}
.flex{
    display: flex;
    justify-content:space-around;
    margin-bottom: 20px;
}
.flex h3{
    width: 30%;
    font-size: 1rem;
}
.list_equipement{
    list-style: none;
    background-color: #F6F6F6;
    margin-top: 0;
    padding-top: 15px;
    padding-bottom: 10px;
}
.profileInfo{
    @media screen and (max-width:880px) {
        margin-left: 10px;
        margin-right: 10px;
        display: flex;
        flex-direction: row-reverse;
        align-items: center;
        justify-content: space-between;
    }
}

